# django-voyager

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: ci.yml
components/: NotificationCenter.jinja  Sidebar.jinja
config/: asgi.py  jinja2.py  middleware.py  urls.py  wsgi.py
config/management/commands/: makemigrations.py
config/settings/: base.py  deployed.py  local.py  production.py  test.py
docs/superpowers/plans/: 2026-04-05-lab-app.md  2026-04-05-project-setup.md
docs/superpowers/specs/: 2026-04-05-lab-app-design.md  2026-04-05-project-setup-design.md
fixtures/: accelerator.json  collision.json  element.json  experiment.json  experiment_category.json
lab/: admin.py  api.py  apps.py  forms.py  models.py  resources.py  schemas.py  services.py  tasks.py  urls.py  views.py
lab/management/commands/: export_all.py  import_all.py  seed.py
lab/migrations/: 0001_initial.py  0002_rename_collision_event_to_collision.py  0003_add_organization_and_conference.py
mock/: apps.py  tasks.py
mock/management/commands/: setup_periodic_tasks.py
scripts/: serve.sh
static/iconx/: icons.css
static/src/: main.css  main.js
templates/: base.html
templates/lab/: accelerator_list.html  dashboard.html  element_list.html  experiment_detail.html  experiment_form.html  experiment_list.html
tests/: conftest.py
tests/lab/: factories.py  test_admin.py  test_api.py  test_commands.py  test_models.py  test_services.py  test_tasks.py  test_views.py
