[project]
name = "django-voyager"
version = "0.1.0"
description = "Reference Django project integrating the full oliverhaas package stack"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
dependencies = [
  # Core
  "Django==6.0.3",
  "granian==2.7.2",
  "httpx==0.28.1",
  "pillow==12.2.0",
  "psycopg[c]==3.3.3",
  "tenacity==9.1.4",
  # Our packages
  "celery-asyncio==6.0.0a2",
  "django-admin-boost==0.1.0a1",
  "django-cachex[valkey]==0.3.0",
  "django-celeryx==0.1.0a1",
  "django-filthyfields==1.9.8b3",
  "django-formwork==0.1.0a1",
  "django-nplus1==0.1.0a1",
  # Third-party Django
  "django-allauth==65.15.1",
  "django-anymail==14.0",
  "django-cachalot==2.9.0",
  "django-celery-beat==2.9.0",
  "django-import-export==4.4.0",
  "django-ninja==1.6.2",
  "django-pg-zero-downtime-migrations==0.19",
  "django-pghistory==3.9.2",
  "django-pgtrigger==4.17.0",
  "django-syzygy==1.2.3",
  "django-tree-queries==0.24.0",
  "django-unfold==0.87.0",
  "django-vite==3.1.0",
  "django-waffle==5.0.0",
  "jinjax==0.63",
]


[dependency-groups]
dev = [
  "beautifulsoup4==4.14.3",
  "debugpy==1.8.14",
  "django-stubs==6.0.1",
  "djlint==1.36.4",
  "factory-boy==3.3.3",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-flakefinder==1.1.0",
  "pytest-playwright==0.7.2",
  "pytest-xdist==3.8.0",
  "ruff==0.15.7",
  "testcontainers==4.14.2",
  "ty==0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]

# --- Ruff ---

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true
exclude = [".claude/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # Conflicts with ruff-format
  "D",      # Docstrings - will add incrementally
  "E501",   # Line length handled by config
  "EM",     # Exception strings inline are fine
  "TRY003", # Long exception messages are helpful for debugging
  "SIM108", # Ternary not always clearer
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",     # Type annotations not required in tests
  "ARG",     # Unused arguments common in fixtures
  "DTZ005",  # Timezone-naive datetime okay in tests
  "F841",    # Unused variables okay in tests
  "FBT",     # Boolean args fine in test fixtures
  "PLC0415", # Imports inside test functions for scoping
  "PT006",   # Parametrize tuple style is preference
  "PT011",   # Broad pytest.raises okay in some tests
  "PT013",   # pytest import style is preference
  "PT018",   # Compound assertions okay in tests
  "RUF002",  # Unicode in docstrings is fine
  "RUF015",  # next(iter()) vs slice is preference
  "S101",    # assert in tests
  "S105",    # Hardcoded passwords in test settings
  "S311",    # random is fine for tests
  "SLF001",  # Private member access for testing internal state
  "PLR2004", # HTTP status codes are not magic values
]
"config/settings/**" = [
  "F403", # Wildcard imports for settings splitting
  "F405", # Undefined names from wildcard imports
  "S105", # Hardcoded dev-only secret key
]
"manage.py" = [
  "PLC0415", # Import inside function is Django's manage.py pattern
]
"**/migrations/**" = [
  "RUF012", # Mutable class attributes are Django migration pattern
]
"**/admin.py" = [
  "ARG002", # Unused args in permission overrides (Django signature)
  "RUF012", # Mutable class attributes are Django admin pattern
]
"**/forms.py" = [
  "RUF012", # Mutable class attributes are Django form Meta pattern
]
"**/views.py" = [
  "PLC0415", # Imports inside view functions for scoping
  "SLF001",  # _meta access is standard Django pattern
]
"**/api.py" = [
  "ANN",     # Ninja view signatures are typed via schemas, not annotations
  "ARG001",  # request param required by Ninja but not always used
  "B008",    # Query() in defaults is the Ninja pattern
  "PLR0913", # Ninja views with many query params
  "TC003",   # Ninja uses types at runtime for query param parsing
]
"**/schemas.py" = [
  "RUF012", # Pydantic schemas use mutable defaults
  "TC003",  # Pydantic needs stdlib types at runtime
]

# --- MyPy ---

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = false
disable_error_code = ["import-untyped"]
exclude = ["config/management/"]

[tool.django-stubs]
django_settings_module = "config.settings.base"

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "celery",
  "celery.*",
  "dirtyfields",
  "dirtyfields.*",
  "import_export",
  "import_export.*",
  "ninja",
  "ninja.*",
  "pghistory",
  "pghistory.*",
  "tenacity",
  "tenacity.*",
  "tree_queries",
  "tree_queries.*",
  "syzygy",
  "syzygy.*",
  "waffle",
  "waffle.*",
]
ignore_missing_imports = true

# --- ty ---

[tool.ty.environment]
python-version = "3.14"

[tool.ty.analysis]
respect-type-ignore-comments = false

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["lab/**"]

[tool.ty.overrides.rules]
# Untyped third-party packages (dirtyfields, tree_queries, pghistory, etc.)
call-non-callable = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["config/management/**"]

[tool.ty.overrides.rules]
# Dynamic class construction for combining pgtrigger + syzygy autodetectors
unsupported-base = "ignore"
invalid-attribute-access = "ignore"
invalid-return-type = "ignore"

[[tool.ty.overrides]]
include = ["config/jinja2.py"]

[tool.ty.overrides.rules]
# Jinja2 env.globals has overly complex type stubs
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = [
  "config/settings/local.py",
  "config/settings/test.py",
  "config/settings/deployed.py",
]

[tool.ty.overrides.rules]
# Settings overrides intentionally reassign base settings with different values
invalid-assignment = "ignore"

# --- Pytest ---

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
addopts = "--cov=config --cov=lab --cov-report=term-missing --no-cov-on-fail"
pythonpath = ["."]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*", "config/settings/deployed.py"]

[tool.coverage.report]
precision = 2
skip_covered = true

# --- djlint ---

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
